--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.portfolio</groupId>
     <artifactId>lnm</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>lnm</name>
+    <name>lnm.Produccion</name>
     <description>Portfolio de Leandro Moyano</description>
     <properties>
         <java.version>1.8</java.version>
@@ -36,8 +36,8 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -53,7 +53,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-            <version>2.7.0</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
